added Tetromino class

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <body bgcolor="#FFFFFF"></body>
     <script src="classes/Rectangle.js"></script>
+    <script src="classes/Tetromino.js"></script>
     <script src="sketch.js"></script>
 </body>
 
