--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <body bgcolor="#FFFFFF"></body>
+    <body bgcolor="#000000"></body>
     <script src="classes/Rectangle.js"></script>
     <script src="classes/Tetromino.js"></script>
     <script src="sketch.js"></script>
